--- a/layout.html
+++ b/layout.html
@@ -1,6 +1,9 @@
-
-<video width="100%" height="100%"  id="video"  media="all and (max-width:600px)" autoplay >
-  <source src="./videos/gustavolima.mp4" type="video/mp4">
+<video
+  width="100%"
+  height="100%"
+  id="video"
+  media="all and (max-width:600px)"
+  autoplay
+>
+  <source src="./videos/gustavolima.mp4" type="video/mp4" />
 </video>
-
-    
